# tox-config-reader

./: LICENSE  README.md  pyproject.toml
src/tox_config_reader/: __init__.py  raw.py  substitutions.py
tests/: test_raw.py  test_substitutions.py
tests/configs/basic_ini/: expected.json  tox.ini
tests/configs/basic_pyproject_legacy/: expected.json  pyproject.toml
tests/configs/basic_pyproject_native/: expected.json  pyproject.toml
tests/configs/basic_setup_cfg/: expected.json  setup.cfg
tests/configs/basic_toml/: expected.json  tox.toml
tests/configs/complex_ini/: expected.json  tox.ini
tests/configs/complex_toml/: expected.json  tox.toml
