[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "tox-config-reader"
dynamic = ["version"]
description = "A tool to read tox configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Miro Hrončok", email = "miro@hroncok.cz"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/hroncok/tox-config-reader"

