[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "tox-config-reader"
dynamic = ["version"]
description = "A tool to read tox configuration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Miro HronÄok", email = "miro@hroncok.cz"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
dependencies = [
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/hroncok/tox-config-reader"

[dependency-groups]
test = [
    "pytest>=7.0",
]
lint = [
    "ruff>=0.8",
]

[tool.tox]
requires = ["tox>=4.21"]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14", "3.15", "lint"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.lint]
dependency_groups = ["lint"]
commands = [["ruff", "check", "src", "tests"], ["ruff", "format", "--check", "src", "tests"]]

